# apps/api/src/usecase/mod.rs
@@ -8,6 +8,7 @@ mod change_repo_member_role;
 mod change_repo_policy;
 pub mod change_repo_username;
 mod create_api_key;
+mod create_global_id_mapping;
 mod create_organization;
 mod create_pull_request;
 mod create_repo;
@@ -16,7 +17,9 @@ mod delete_data;
 mod delete_property;
 mod delete_repo;
 mod delete_source;
+mod find_global_id_mappings;
 mod find_sources;
+mod get_global_id_mapping;
 mod get_markdown_previews;
 mod get_properties;
 mod get_repo_members;
@@ -34,6 +37,7 @@ mod search_data;
 mod search_repo;
 mod sign_in;
 mod update_data;
+mod update_global_id_mapping;
 mod update_organization;
 mod update_property;
 mod update_repo;
@@ -63,6 +67,7 @@ pub use change_repo_member_role::*;
 pub use change_repo_policy::*;
 pub use change_repo_username::*;
 pub use create_api_key::*;
+pub use create_global_id_mapping::*;
 pub use create_organization::*;
 pub use create_repo::*;
 pub use create_source::*;
@@ -70,7 +75,9 @@ pub use delete_data::*;
 pub use delete_property::*;
 pub use delete_repo::*;
 pub use delete_source::*;
+pub use find_global_id_mappings::*;
 pub use find_sources::*;
+pub use get_global_id_mapping::*;
 pub use get_markdown_previews::*;
 pub use get_properties::*;
 pub use get_repo_members::*;
@@ -86,6 +93,7 @@ pub use search_data::*;
 pub use search_repo::*;
 pub use sign_in::*;
 pub use update_data::*;
+pub use update_global_id_mapping::*;
 pub use update_organization::*;
 pub use update_property::*;
 pub use update_repo::*;
